--- a/src/css/Globalstyle.css
+++ b/src/css/Globalstyle.css
@@ -88,3 +88,22 @@
   margin-bottom: 200px;
   max-width: 40%;
 }
+.carousel {
+  cursor: grab;
+  overflow: hidden;
+}
+.carousel-inner {
+  display: flex;
+}
+.carousel-item {
+  min-height: 200px;
+  min-width: 400px;
+  padding: 14px;
+}
+.carousel-item img {
+  width: 100%;
+  height: 90%;
+  pointer-events: none;
+  object-fit: cover;
+  border-radius:.2rem;
+}
