--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,4 +1,4 @@
-footer  {
+/* footer  {
   background-color: var(--dark);
   color: var(--background);
   font-size: 12px;
@@ -8,15 +8,15 @@ footer  {
   padding: 3rem;
   align-items: center;
   
-}
-footer a {
+} */
+/* footer a {
   color: white;
   text-decoration: none;
-}
-footer a:hover {
+} */
+/* footer a:hover {
   color: #EEA80A;
   text-decoration: none;
-}
+} */
 footer ul {
   list-style: none;
   padding:0 ;
