--- a/src/css/GlobalStyles.css
+++ b/src/css/GlobalStyles.css
@@ -4,31 +4,21 @@
 
 @layer base {
   :root {
-    font-family: 'Karla', sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
-
-    color: var(--dark);
-    background-color: var(--background);
-
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-
-    --dark: #0f0e0e;
-    --gray: #c4c4c4;
+    /* --gray: #c4c4c4;
     --yellow: #eea80a;
-    --dark-yellow: #d99800;
     --orange: #ff6100;
     --red: #c70402;
     --green: #3c6128;
-    --purple: #93679b;
-    --background: #fffefa;
-
-    --body: #0f0e0e;
-    --muted: var(--gray);
+    --purple: #93679b; */
   }
+}
+
+a {
+  transition: all 0.25s ease-in;
+}
+
+ a:hover {
+  color: var(--yellow);
 }
 
 .title {
@@ -65,6 +55,5 @@
   width: 100%;
   height: 90%;
   pointer-events: none;
-  object-fit: cover;
   border-radius: 0.2rem;
 }
