--- a/src/css/GlobalStyles.css
+++ b/src/css/GlobalStyles.css
@@ -57,3 +57,13 @@ a {
   pointer-events: none;
   border-radius: 0.2rem;
 }
+
+
+.show {
+  max-height: 1000px;
+  transition: max-height 1s ease-in-out;
+}
+.hide {
+  max-height: 0;
+  transition: max-height 0.3s ease-in-out;
+}
